- Assignment A has Some changes - Done - Assignment B done