@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -33,8 +32,11 @@ public class CourseDataLoader {
         }
 
         CourseDocument[] courses = objectMapper.readValue(is, CourseDocument[].class);
+        for (CourseDocument course : courses) {
+            course.setSuggest(new Completion(List.of(course.getTitle())));
+        }
 
 
-        courseRepository.saveAll(Arrays.asList(courses));
+        courseRepository.saveAll(List.of(courses));
     }
 }
